@@ -1,9 +1,10 @@
-// $Id: CHANGELOG.txt,v 1.1.2.22 2008/09/16 02:59:53 boombatower Exp $
+// $Id: CHANGELOG.txt,v 1.1.2.23 2008/09/16 03:02:31 boombatower Exp $
 
 SimpleTest 6.x-2.4, xxxx-xx-xx (development version)
 - Backports:
    * #305077: Rework simpletest backend.
    * #308399: The simpletest error handler is broken for PHP functions.
+   * #308262: Clean-up and documentation of simpletest.js.
 
 SimpleTest 6.x-2.3, 2008-09-15
 ------------------------------
